[project]
name = "limes-axis-api"
version = "0.0.0"
description = "Core API for Limes Axis."
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.17",
  "fastapi>=0.128",
  "opentelemetry-api>=1.39",
  "opentelemetry-sdk>=1.39",
  "psycopg[binary]>=3.3",
  "pydantic-settings>=2.12",
  "python-jose[cryptography]>=3.5",
  "sqlalchemy>=2.0",
  "typedb-driver>=2.28",
  "uvicorn[standard]>=0.38"
]

[dependency-groups]
dev = [
  "httpx>=0.28",
  "pytest>=9.0",
  "pytest-asyncio>=1.3",
  "ruff>=0.14"
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: requires the local Docker runtime and AXIS_RUN_INTEGRATION=1"
]
