[project]
name = "limes-axis-worker"
version = "0.0.0"
description = "Worker runtime for Limes Axis workflows and agent actions."
requires-python = ">=3.12,<3.14"
dependencies = [
  "limes-axis-api",
  "opentelemetry-api>=1.39",
  "opentelemetry-exporter-otlp-proto-http>=1.42",
  "opentelemetry-instrumentation>=0.63b0",
  "opentelemetry-sdk>=1.39",
  "pydantic>=2.12",
  "temporalio>=1.20",
]

[dependency-groups]
dev = [
  "pytest>=9.0",
  "pytest-asyncio>=1.3",
  "ruff>=0.14"
]

[tool.uv]
package = true

[tool.uv.sources]
limes-axis-api = { path = "../api", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "integration: requires the local Docker runtime and AXIS_RUN_INTEGRATION=1"
]
